--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "nunomaduro/larastan": "^3.3",
+        "pestphp/pest": "^3.8",
+        "pestphp/pest-plugin": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.2",
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^11.5.3"
     },
